BLI_polyfill_calc crash when use a big number of points #80604

Closed
opened 2020-09-08 19:07:59 +02:00 by Antonio Vazquez · 7 comments

In grease pencil, we have been using BLI_polyfill_calc ()for triangulate a stroke. During some tests with heavy geometries, we have detected the function crash when you have a lot of points and the memory cannot be allocated.

A possible solution could be used BLI_polyfill_calc_arena, but this doesn't solve the root issue.We keep this bug in order to keep the bug listed.

In grease pencil, we have been using `BLI_polyfill_calc ()`for triangulate a stroke. During some tests with heavy geometries, we have detected the function crash when you have a lot of points and the memory cannot be allocated. A possible solution could be used BLI_polyfill_calc_arena, but this doesn't solve the root issue.We keep this bug in order to keep the bug listed.
Author
Member

Added subscriber: @antoniov

Added subscriber: @antoniov
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Member

Added subscribers: @ideasman42, @brecht

Added subscribers: @ideasman42, @brecht
First-time contributor

This issue was referenced by d52d56e83d

This issue was referenced by d52d56e83dc72f8e140a631f0d9eeb8170cf31e5
First-time contributor

This issue was referenced by fe08aa4e2c

This issue was referenced by fe08aa4e2cb9b7e58cefc062afdb886961a4cf9a
First-time contributor

This issue was referenced by 1f75be8a40

This issue was referenced by 1f75be8a40041e94711c5d17507d88d8e64c1977

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2020-09-09 04:58:53 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80604
No description provided.